--- a/Variables/_variables.scss
+++ b/Variables/_variables.scss
@@ -18,4 +18,7 @@ $color-yellow: yellow;
 $color-darkblue:darkblue;
 $color-darkgray: #706e6e;
 $color-darkgoldenrold:darkgoldenrod;
+$color-darkgold:#C8A969;
+$color-filigran:#C5BAA5;
+$color-section:#FAEDD2;
 // ----------------------------------------------------------------------------------------------
