--- a/Variables/_variables.scss
+++ b/Variables/_variables.scss
@@ -1,6 +1,6 @@
 // Colors variables
 $color-aqua: aqua;
-$color-back: black; 
+$color-black: black; 
 $color-blue: blue;
 $color-fuchsia: fuchsia;
 $color-gray: gray;
