--- a/style.scss
+++ b/style.scss
@@ -1,22 +1,74 @@
 @import "Variables/_variables.scss";
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
 
-body{
-  margin: 0;
+// Header
+
+html{
+  height: 100%;
+  body{
+    min-height: 100%;
+    margin: 0;
+    header{
+      min-height: 100vh;
+    }
+  }
 }
 
 .header{
-  // background-image: url('/assets/img/slider/img_bg_slider_home01.jpg');
-  background-color:$color-darkblue;
+  background-image: url('/assets/img/slider/img_bg_slider_home01.jpg');
+  background-size: cover;
+  background-position: center center;
   color: $color-white;
+  .header_img{margin:10px}
+  .header_logo{
+    display: flex;
+    align-items: flex-end;
+    margin-left: 10px;
+    margin-top: 80px;
+  }
+  .header_title{
+    display: flex;
+    justify-content: center;
+    font-family: 'Cinzel', serif;
+    -webkit-text-stroke: 0.5px black;
+  }
+  .fa-phone{color:$color-darkgold}
+  .header_header_phone_book{
+    padding: 10px;
+    background-color: $color-darkgold;
+    border-radius: 5px;
+  }
   .header_phone{
     float: right;
   }
-  li{
+  .header_header_phone_book, .header_header_phone_num{
+    list-style:none;
+    margin: 5px;
+  }
+  .header_ul_li_home, .header_ul_li_about, .header_ul_li_page, .header_ul_li_shop, .header_ul_li_contact{
     list-style: none;
     margin-bottom: 4px;
-    
+    cursor: pointer;
+    width: 80px;
+  }
+  li:hover{
+    color: $color-darkgold;
   }
   .header_ul_li_home{
-    color:$color-darkgoldenrold;
+    color:$color-darkgold;
+  }
+  .header_p{
+    margin: auto;
+    font-size: small;
+    // -webkit-text-stroke: 0.5px $color-black;
+    padding: 5px;
+    border: 1px solid $color-white;
+    width: 170px;
+    color: $color-darkgold;
+  }
+  .header_p:hover{
+    background-color: $color-darkgold;
+    color: $color-black;
   }
 }
