Finish mobile category alone

--- a/Variables/_variables.scss
+++ b/Variables/_variables.scss
@@ -18,7 +18,11 @@ $color-yellow: yellow;
 $color-darkblue:darkblue;
 $color-darkgray: #706e6e;
 $color-darkgoldenrold:darkgoldenrod;
-$color-darkgold:#C8A969;
+$color-darkgold:#C8A96A;
 $color-filigran:#C5BAA5;
 $color-section:#FAEDD2;
 // ----------------------------------------------------------------------------------------------
+
+//Fonts
+$font-titles:'Nanum Myeongjo', serif;
+$font-p:'Roboto', sans-serif;
