--- a/style.scss
+++ b/style.scss
@@ -74,14 +74,9 @@ html {
     margin-bottom: 4px;
     cursor: pointer;
     width: 80px;
-  }
-
-  .header_ul_li_home:hover,
-  .header_ul_li_about:hover,
-  .header_ul_li_page:hover,
-  .header_ul_li_shop:hover,
-  .header_ul_li_contact:hover {
-    color: $color-darkgold;
+    &:hover{
+      color: $color-darkgold;
+    }
   }
 }
 .header_p {
@@ -92,53 +87,11 @@ html {
   border: 1px solid $color-white;
   width: 180px;
   color: $color-darkgold;
-}
-.header_p:hover {
-  background-color: $color-darkgold;
-  color: $color-black;
-}
-
-@media only screen and (min-width: 768px) {
-  .header_p{
-    margin: auto;
-  }
-  .header_phone{
-    margin:20px;
-    .header_header_phone_num{
-      margin-top:10px;
-      margin-right: 10px;
-    }
+  &:hover {
+    background-color: $color-darkgold;
+    color: $color-black;
   }
 }
-@media only screen and (min-width: 1024px) {
-  li {
-    display: inline;
-  }
-  .header_ul {
-    display: flex;
-    // text-align: center;
-    // width: 400px;
-    // float: right;
-    justify-content: center;
-    // align-content: center;
-  }
-  .header_phone {
-    display: flex;
-    flex-direction: row-reverse;
-  }
-  .header_title {
-    float: none;
-    width: 50px;
-    font-size: 300%;
-    margin-left: 250px;
-  }
-}
-
-
-
-
-
-
 
 // category
 .category {
@@ -264,6 +217,52 @@ html {
       border:white solid 20px;
       border-radius: 50%;
     }
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .header_p{
+    margin: auto;
+  }
+  .header_phone{
+    margin:20px;
+    .header_header_phone_num{
+      margin-top:10px;
+      margin-right: 10px;
+    }
+  }
+}
+@media only screen and (min-width: 1024px) {
+  li {
+    display: inline;
+  }
+  .header_p{
+    margin-left: 50px;
+  }
+  .header_logo{
+    position: absolute;
+    top:130px;
+    left: 400px;
+  }
+  .header_ul {
+    position: absolute;
+    left: 25%;
+    top: 0px;
+    li{
+      margin-left:15px;
+    }
+  }
+  .header_phone {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-top: 10px;
+  }
+  .header_title {
+    float: none;
+    width: 50px;
+    font-size: 300%;
+    margin-left: 250px;
+    margin-top: 130px;
   }
 }
 
