--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ html body header {
   position: relative;
   box-sizing: border-box;
   width: 100%;
-  height: 650px;
+  height: 125vw;
   font-family: "Nanum Myeongjo", serif;
 }
 
@@ -130,7 +130,7 @@ html body header {
   background: linear-gradient(45deg, rgba(250, 237, 210, 0.5) 0%, rgba(250, 237, 210, 0.5) 100%), url(assets/img/banner/imgbgcategory.jpg);
   background-repeat: no-repeat;
   background-position: 50%;
-  height: 500px;
+  height: 110vw;
   padding: 20px;
   background-size: contain;
 }
@@ -164,13 +164,14 @@ html body header {
 .category__up__wrapItems {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 120px 120px;
+  grid-template-rows: 25% 25%;
   -moz-column-gap: 5%;
        column-gap: 5%;
   row-gap: 5%;
   width: 70%;
   margin: auto;
   padding: 20px;
+  margin-top: 10vw;
 }
 .category__up__item {
   background-color: white;
@@ -182,7 +183,7 @@ html body header {
 }
 .category__up__item__dish {
   align-self: center;
-  width: 50%;
+  width: 40%;
 }
 .category__up__item__title {
   font-size: 0.6em;
@@ -206,7 +207,7 @@ html body header {
 
 .category__down {
   position: absolute;
-  top: 70%;
+  top: 100vw;
   left: 50%;
   transform: translate(-50%, 0%);
   display: flex;
