--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
-@import "Variables/_variables.scss";
+@import "ModulesSCSS/_variables.scss";
+@import "ModulesSCSS/reset.scss";
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&family=Roboto:wght@100;300;400&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cinzel&display=swap");
@@ -7,6 +8,55 @@
 
 * {
   box-sizing: border-box;
+}
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
 html {
@@ -166,35 +216,14 @@ html {
   // }
 
   &__filigran{
-    text-transform: uppercase;
-    font-size:70px;
-    font-weight:800;
-    color:$color-darkgold;
-    opacity:0.3;
+    @extend %filigran;
     margin:0.4em 0 0.2em 0;
   }
 
   &__wrapTitle{
-    position: absolute;
-    left:50%;
-    width:100%;
-    transform: translate(-50%,-160%);
+    @include wrapTitle(-160%);
   }
 
-  &__title{
-    text-transform: uppercase;
-    font-size: large;
-    text-align: center;
-    margin:0;
-  }
-
-  &__text {
-    font-family: $font-p;
-    text-align: center;
-    font-size:0.8rem;
-    margin:0;
-    padding:5px 0 0 0;
-  }
   
   &__wrapItems {
     display: grid;
