--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@
 @import "moduleSCSS/_font.scss";
 @import "moduleSCSS/_header.scss";
 @import "moduleSCSS/_category.scss";
+@import "moduleSCSS/_aboutus.scss";
 @import "moduleSCSS/_reset.scss";
 
 
