--- a/moduleSCSS/_category.scss
+++ b/moduleSCSS/_category.scss
@@ -1,10 +1,10 @@
 //Category
-
+//Mobile first
 .category {
     position:relative;
     box-sizing: border-box;
     width: 100%;
-    height:125vw;
+    height:140vw;
     font-family: $font-titles;
   }
   
@@ -13,7 +13,7 @@
     background: linear-gradient(45deg, rgba(250,237,210,0.5) 0%, rgba(250,237,210,0.5) 100%), url(assets/img/banner/imgbgcategory.jpg);
     background-repeat: no-repeat;
     background-position:50%;
-    height: 110vw;
+    height: 100vw;
     padding:20px;
     background-size:contain;
   
@@ -41,7 +41,7 @@
   
     &__item {
       background-color: white;
-      padding:20px 0;
+      padding:10px 0;
       display:flex;
       flex-direction: column;
       justify-content: space-around;
@@ -49,6 +49,7 @@
   
       &__dish {
         align-self:center;
+        padding:10px 0;
         width:40%;
       }
   
@@ -58,6 +59,7 @@
   
       &__arrow {
         align-self:center;
+        padding:10px 0;
         width: 20%;
   
       }
@@ -80,7 +82,7 @@
     position:absolute;
     top:100vw;
     left:50%;
-    transform: translate(-50%,0%);
+    transform: translate(-50%,-20%);
     display:flex;
     justify-content:space-between;
     gap:5%;
@@ -95,4 +97,148 @@
         border-radius: 50%;
       }
     }
+  }
+
+  @media only screen and (min-width: 768px) {
+    .category {
+       
+    }
+    
+    .category__up {
+      
+    
+      &__filigran{
+        
+      }
+    
+      &__wrapTitle{
+        
+      }
+      
+      &__wrapItems {
+        
+      }
+    
+      &__item {
+        
+    
+        &__dish {
+         
+        }
+    
+        &__title {
+          
+        }
+    
+        &__arrow {
+          
+    
+        }
+      }
+      &__item:hover{
+        
+        .category__up__item__dish{
+          
+        }
+        h4{
+          
+        }
+        .category__up__item__arrow {
+         
+        }
+      }
+    }
+    
+    .category__down{
+      
+      &__dish {
+        
+        &__middle {
+          
+        }
+      }
+    }
+  
+    .test{
+      
+    }
+}
+  
+//Desktop
+
+  @media only screen and (min-width: 1024px) {
+    // .category {
+       
+    //   }
+      
+      .category__up {
+        background-position:0;
+      
+        &__filigran{
+            @include filigranDesktop;
+            margin:0.4em 0 0.2em 0;
+        }
+      
+        &__wrapTitle{
+            @include wrapTitleDesktop(-220%);
+        }
+        
+        &__wrapItems {
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 25%;
+            column-gap:2%;
+            row-gap: 2%;
+        
+            width:78%;
+            margin:auto;
+            padding:0px;
+            margin-top: 3vw;
+        }
+      
+        &__item {
+            padding:20px 0;
+            &__dish {
+                align-self:center;
+                padding:10px 0;
+                width:25%;
+            }
+        
+            &__title {
+                font-family: $font-p;
+                font-size: 1.2em;
+                margin:5px 0;
+            }
+        
+            &__arrow {
+                padding:20px 0;
+                width: 8%;
+            }
+        }
+    //     &__item:hover{
+          
+    //       .category__up__item__dish{
+            
+    //       }
+    //       h4{
+            
+    //       }
+    //       .category__up__item__arrow {
+           
+    //       }
+    //     }
+    //   }
+      
+    //   .category__down{
+        
+    //     &__dish {
+          
+    //       &__middle {
+            
+    //       }
+    //     }
+    //   }
+    
+    //   .test{
+        
+      }
   }
