--- a/style.css
+++ b/style.css
@@ -1,6 +1,64 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&family=Roboto:wght@100;300;400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cinzel&display=swap");
+* {
+  box-sizing: border-box;
+}
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 .category__up__filigran {
   text-transform: uppercase;
   font-size: 70px;
@@ -93,7 +151,7 @@ html body header {
   position: relative;
   box-sizing: border-box;
   width: 100%;
-  height: 125vw;
+  height: 140vw;
   font-family: "Nanum Myeongjo", serif;
 }
 
@@ -102,7 +160,7 @@ html body header {
   background: linear-gradient(45deg, rgba(250, 237, 210, 0.5) 0%, rgba(250, 237, 210, 0.5) 100%), url(assets/img/banner/imgbgcategory.jpg);
   background-repeat: no-repeat;
   background-position: 50%;
-  height: 110vw;
+  height: 100vw;
   padding: 20px;
   background-size: contain;
 }
@@ -122,7 +180,7 @@ html body header {
   margin: 0;
 }
 .category__up__wrapTitle__text {
-  font-family: "Roboto", sans-serif;
+  font-family: "Open Sans", sans-serif;
   text-align: center;
   font-size: 0.8rem;
   margin: 0;
@@ -142,7 +200,7 @@ html body header {
 }
 .category__up__item {
   background-color: white;
-  padding: 20px 0;
+  padding: 10px 0;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -150,6 +208,7 @@ html body header {
 }
 .category__up__item__dish {
   align-self: center;
+  padding: 10px 0;
   width: 40%;
 }
 .category__up__item__title {
@@ -157,6 +216,7 @@ html body header {
 }
 .category__up__item__arrow {
   align-self: center;
+  padding: 10px 0;
   width: 20%;
 }
 .category__up__item:hover {
@@ -176,7 +236,7 @@ html body header {
   position: absolute;
   top: 100vw;
   left: 50%;
-  transform: translate(-50%, 0%);
+  transform: translate(-50%, -20%);
   display: flex;
   justify-content: space-between;
   gap: 5%;
@@ -193,64 +253,68 @@ html body header {
   border-radius: 50%;
 }
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-* {
-  box-sizing: border-box;
+@media only screen and (min-width: 1024px) {
+  .category__up {
+    background-position: 0;
+  }
+  .category__up__filigran {
+    text-transform: uppercase;
+    font-size: 170px;
+    font-weight: 400;
+    transform: scale(1, 1.2);
+    color: #C8A969;
+    opacity: 0.2;
+    margin: 0.4em 0 0.2em 0;
+  }
+  .category__up__wrapTitle {
+    position: absolute;
+    left: 50%;
+    width: 100%;
+    transform: translate(-50%, -220%);
+  }
+  .category__up__wrapTitle__title {
+    text-transform: uppercase;
+    font-size: 40px;
+    text-align: center;
+    margin: 0;
+  }
+  .category__up__wrapTitle__text {
+    font-family: "Open Sans", sans-serif;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: bold;
+    margin: 10px 0 0 0;
+    padding: 5px 0 0 0;
+  }
+  .category__up__wrapItems {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 25%;
+    -moz-column-gap: 2%;
+         column-gap: 2%;
+    row-gap: 2%;
+    width: 78%;
+    margin: auto;
+    padding: 0px;
+    margin-top: 3vw;
+  }
+  .category__up__item {
+    padding: 20px 0;
+  }
+  .category__up__item__dish {
+    align-self: center;
+    padding: 10px 0;
+    width: 25%;
+  }
+  .category__up__item__title {
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.2em;
+    margin: 5px 0;
+  }
+  .category__up__item__arrow {
+    padding: 20px 0;
+    width: 8%;
+  }
 }
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
 @media only screen and (min-width: 768px) {
   .header_p {
     margin: auto;
